# agentscope-sdks

.github/workflows/: contract-test.yml  publish-python.yml  publish-ts.yml
python-sdk/: README.md  pyproject.toml
python-sdk/agentscope/: __init__.py  cli.py  client.py  coding_agent.py  context_manager.py  exporter.py  run.py  span.py  telemetry.py  trace.py
python-sdk/agentscope.egg-info/: PKG-INFO  SOURCES.txt
python-sdk/agentscope/instrumentation/: __init__.py  anthropic.py  anthropic_adapter.py  base.py  http_interceptor.py  langchain_adapter.py  llm_tracer.py  openai.py  openai_adapter.py  orchestration.py  propagation.py  provider_detection.py  registry.py  token_usage.py  tracer.py
ts-sdk/: README.md  agentscope-sdk-sdk-0.1.3.tgz  package-lock.json  package.json  tsconfig.json
ts-sdk/examples/: basic.js
ts-sdk/src/: client.ts  coding_agent.ts  context.ts  exporter.ts  index.ts  run.ts  span.ts  telemetry.ts  trace.ts  types.ts
ts-sdk/src/instrumentation/: fetch.ts  index.ts
