[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentscope"
version = "0.1.0"
description = "AgentScope Python SDK"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["agentscope*"]
