[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentscope-sdk"
version = "0.1.16"
description = "AgentScope Python SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
agentscope = "agentscope.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["agentscope*"]
